--- a/deploy.yml
+++ b/deploy.yml
@@ -1,6 +1,6 @@
 ---
  - name: Sample Playbook
-   hosts: ansible_client
+   hosts: ansibleServer
    remote_user: ec2-user
    become: true
    tasks:
